--- a/src/main/resources/templates/usuario/usuarioCreate.html
+++ b/src/main/resources/templates/usuario/usuarioCreate.html
@@ -22,11 +22,12 @@
 
 
                     <div class="form-group row justify-content-center">
-                        <div class="input-group col-xl-5">
+                        <div class="field-wrapper col-xl-5">
                             <input type="text" name="nome"
                                    id="nome" class="form-control"
-                                   th:field="*{nome}" autofocus="autofocus" placeholder="Nome Completo *" aria-label="Usuário"
+                                   th:field="*{nome}" autofocus="autofocus" aria-label="Usuário"
                                    aria-describedby="basic-addon1">
+                            <div class="field-placeholder"><span>Nome Completo*</span></div>
                         </div>
                     </div>
 
@@ -37,11 +38,12 @@
                     </div>
 
                     <div class="form-group row justify-content-center">
-                        <div class="input-group col-xl-5">
+                        <div class="field-wrapper col-xl-5">
                             <input type="text" name="nomeUsuario" autocomplete="off"
                                    id="nomeUsuario" class="form-control"
-                                   th:field="*{nomeUsuario}" autofocus="autofocus" placeholder="Nome de Usuário *"
+                                   th:field="*{nomeUsuario}" autofocus="autofocus"
                                    aria-label="Nome de Usuário" aria-describedby="basic-addon1">
+                            <div class="field-placeholder"><span>Nome de Usuário*</span></div>
                         </div>
                     </div>
 
@@ -53,11 +55,12 @@
                     </div>
 
                     <div class="form-group row justify-content-center">
-                        <div class="input-group col-xl-5">
+                        <div class="field-wrapper col-xl-5">
                             <input type="text" name="telefone"
                                    id="telefone" class="form-control"
-                                   th:field="*{telefone}" autofocus="autofocus" placeholder="Telefone"
+                                   th:field="*{telefone}" autofocus="autofocus"
                                    aria-label="Telefone" aria-describedby="basic-addon1">
+                            <div class="field-placeholder"><span>Telefone*</span></div>
                         </div>
                     </div>
 
@@ -69,11 +72,12 @@
                     </div>
 
                     <div class="form-group row justify-content-center">
-                        <div class="input-group col-xl-5">
+                        <div class="field-wrapper col-xl-5">
                             <input type="text" name="email"
                                    id="email" class="form-control"
-                                   th:field="*{email}" autofocus="autofocus" placeholder="E-mail *" aria-label="E-mail"
+                                   th:field="*{email}" autofocus="autofocus" aria-label="E-mail"
                                    aria-describedby="basic-addon1">
+                           <div class="field-placeholder"><span>E-mail*</span></div>
                         </div>
                     </div>
 
@@ -84,11 +88,12 @@
                     </div>
 
                     <div class="form-group row justify-content-center">
-                        <div class="input-group col-xl-5">
+                        <div class="field-wrapper col-xl-5">
                             <input type="password" name="senha" autocomplete="off"
                                    id="senha" class="form-control"
-                                   th:field="*{senha}" autofocus="autofocus" placeholder="Senha *" aria-label="Senha"
+                                   th:field="*{senha}" autofocus="autofocus" aria-label="Senha"
                                    aria-describedby="basic-addon1">
+                            <div class="field-placeholder"><span>Senha*</span></div>
                         </div>
                     </div>
 
@@ -100,11 +105,12 @@
 
 
                     <div class="form-group row justify-content-center">
-                        <div class="input-group col-xl-5">
+                        <div class="field-wrapper col-xl-5">
                             <input type="password" name="confirmarSenha" autocomplete="off"
                                    id="confirmarSenha" class="form-control"
-                                   th:field="*{confirmarSenha}" autofocus="autofocus" placeholder="Confirmar senha *"
+                                   th:field="*{confirmarSenha}" autofocus="autofocus"
                                    aria-label="Confirmar senha" aria-describedby="basic-addon1">
+                           <div class="field-placeholder"><span>Confirmar Senha*</span></div>
                         </div>
                     </div>
 
