--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -8,11 +8,11 @@ html, body{
 /* LOGIN */
 .login-container{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100%;
 	width: 100%;
-	height: 100%;
 }
 .login{
 	width: 70vw;
@@ -36,8 +36,8 @@ html, body{
 	padding-left: 40px;
 }
 .footer-login {
-	position: absolute;
-	bottom: 0px;
+	display:flex;
+	justify-content: center;
 	width: 100%;
 }
 .footer {
