--- a/src/main/resources/templates/layout/layoutLogin.html
+++ b/src/main/resources/templates/layout/layoutLogin.html
@@ -18,9 +18,11 @@
 
 	<body>
 		<div class="login-container">
+			<div class="push"></div>
 			<section class="login" layout:fragment="content">
 				Conteudo!
 			</section>
+			<div class="push"></div>
 			<!-- FOOTER -->
 			<footer class="footer-login page-footer font-small" style="background-color:#e9ecef!important;">
 				<!-- Copyright -->
