--- a/src/main/resources/templates/professor/professorCreate.html
+++ b/src/main/resources/templates/professor/professorCreate.html
@@ -8,7 +8,29 @@
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/>
 </head>
 <body>
+
 <section class="main-content" layout:fragment="content">
+<script type="text/javascript">
+                    function showMe () {
+
+                        var chboxs1 = document.getElementById("coordenador_do_curso");
+                        var chboxs2 = document.getElementById("coordenador");
+                        if(chboxs1!=null){
+                        	if(chboxs1.checked){
+                        		document.getElementById("curso").style.display = "flex";
+                            	return;
+                        	}
+                        }
+                        if(chboxs2 != null){
+                        	if(chboxs2.checked){
+                        		document.getElementById("curso").style.display = "flex";
+                        		return;
+                        	}
+                        }
+                        document.getElementById("curso").style.display = "none";
+                    }
+                    </script>
+
     <div id="wrap" class="container">
         <div id="main">
             <div class="jumbotron">
@@ -36,6 +58,15 @@
                         <div style="color: red" th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></div>
                         </div>
                     </div>
+                    
+                    <div class="form-group row justify-content-center" id="curso" name="curso" style="display: none">
+                        <div class="field-wrapper col-xl-5">
+                            <input type="text" class="form-control"
+                                   autofocus="autofocus"
+                                   aria-describedby="basic-addon1">
+                            <div class="field-placeholder"><span>Curso*</span></div>
+                        </div>
+                    </div>            
 
                     <div class="form-group row justify-content-center">
                         <div class="field-wrapper col-xl-5">
@@ -62,7 +93,7 @@
 
                     <div class="form-group offset-md-4 offset-sm-1">
                         <div class="form-check row">
-                            <input class="form-check-input" th:field="*{coordenador}" type="checkbox" name="coordenador" id="coordenador" value="1">
+                            <input class="form-check-input" th:field="*{coordenador}" onclick="showMe()" type="checkbox" name="coordenador" id="coordenador" value="1">
                             <label class="form-check-label" for="coordenador">
                                 Coordenador
                             </label>
@@ -80,7 +111,7 @@
                             </label>
                         </div>
                         <div class="form-check row">
-                            <input class="form-check-input" th:field="*{coordenador_do_curso}" type="checkbox" name="coordenador_do_curso" id="coordenador_do_curso" value="1">
+                            <input class="form-check-input" th:field="*{coordenador_do_curso}" onclick="showMe()" type="checkbox" name="coordenador_do_curso" id="coordenador_do_curso" value="1">
                             <label class="form-check-label" for="coordenador_do_curso">
                                 Coordenador do Curso
                             </label>
