--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -57,6 +57,16 @@
                     <li 
                         class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Agendamento de defesa
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarAdmin">
+                            <a class="dropdown-item" th:href="@{/gtcc/agendamentodefesa}">Consultar</a>
+                            <a class="dropdown-item" th:href="@{/gtcc/agendamentodefesa/cadastrar}">Cadastrar</a>
+                        </div>
+                    </li>
+                    <li 
+                        class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Professor
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarAdmin">
