Feat: pesquisa ficha com editar e excluir

--- a/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
+++ b/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
@@ -42,6 +42,7 @@
 						<!-- 							</div> -->
 						<!-- 						</div> -->
 
+						<input id="id" type="hidden" th:field="*{id}" value="${id}" />
 						<div class="form-group row justify-content-center">
 							<div class="field-wrapper col-xl-10">
 								<input type="text" name="tituloTrabalho" id="tituloTrabalho"
