--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -90,6 +90,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarAdmin">
                             <a class="dropdown-item" th:href="@{/gtcc/fichaidentificacao/cadastrar}" >Cadastrar</a>
+                            <a class="dropdown-item" th:href="@{/gtcc/fichaidentificacao/consultar}" >Consultar</a>
                         </div> 
                     </li>
                     <li 
