Feat: Pesquisa da ficha por titulo do trabalho

--- a/src/main/resources/templates/fichaIdentificacao/fichaSearch.html
+++ b/src/main/resources/templates/fichaIdentificacao/fichaSearch.html
@@ -24,8 +24,7 @@
 							<div class="field-wrapper col-xl-8">
 								<input type="text" name="tituloTrabalho" id="tituloTrabalho"
 									class="form-control" th:field="*{tituloTrabalho}"
-									autofocus="autofocus" aria-label="Título do Trabalho"
-									aria-describedby="basic-addon1">
+									aria-label="Título do Trabalho" aria-describedby="basic-addon1">
 								<div class="field-placeholder">
 									<span>Título do Trabalho</span>
 								</div>
@@ -49,7 +48,7 @@
 									aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
-								
+
 								<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
 									sucesso!</span>
 							</div>
