--- a/src/main/resources/templates/agendamentodefesa/visualizarDefesa.html
+++ b/src/main/resources/templates/agendamentodefesa/visualizarDefesa.html
@@ -1,244 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt"
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{layout/layout}" >
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GTCC</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<style>
-.defesa h3 {
-    text-align: center;
-    font-size: 2em;
-    margin: 1em auto 1em;
-}
-
-.defesas-detalhe {
-    background-color: #e5e5e5;
-    padding: 2em 3em;
-    border-radius: 5px;
-    width: 100%;
-}
-
-table {
-    display: flex;
-    align-items: center;
-    width: 100%;
-}
-thead {
-    width: 100%;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 1em;
-}
-
-.defesas-detalhe h5 {
-    font-size: 1.5em;
-    padding-bottom: .5em;
-}
-
-table th { padding-left: 0.25em; }
-
-table .infos {
-    text-align: left;
-    font-weight: 700;  
-    padding-left: 0.5em;
-}
-
-table th {
-    text-transform: none;
-    font-weight: 100;
-}
-
-  .jumbotron { background: #fff; }
-  .fa { font-size: 0.5em; }
-  .calendar table { width: 100%; }
-  .calendar th { text-align: center; }
-  .calendar td {
-    width: 120px;
-    height: 100px;
-    text-align: center;
-    line-height: 100px !important;
-    font-size: 1.5em;
-  }
-  .calendar td, #year { font-family: monospace; }
-  .calendar .hover { background: #eee; }
-  .calendar #about {
-    font-size: 5em !important;
-    position: absolute;
-    top: -35px;
-    right: 15px;
-  }
-  #about a { text-decoration: none; }
-  
-  .pdf {
-    background-color: #e5e5e5;
-    padding: 1em;
-    border-radius: 5px;
-    text-align: center;
-  }
-
-  .pdf h5 {
-    text-align: left;
-    padding-bottom: 1em;
-  }
-
-  .pdf button {
-    background-color: #343F4B;
-    border: none;
-    padding: .5em 2em;
-    color: white;
-    text-transform: uppercase;
-  }
-
-.cadastro-defesa form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0 1em;
-}
-
-.cadastro-defesa label {
-  width: 100%;
-  padding-top: .5em;
-}
-
-.cadastro-defesa .botoes {
-  padding-top: 1em;
-  display: flex;
-  justify-content: space-between;
-  
-}
-
-.cadastro-defesa .botoes .cancelar {
-  background-color: #343F4B;
-  border: none;
-  padding: .5em 2em;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 5px;
-  width: 150px;
-}
-
-.cadastro-defesa .botoes .excluir {
-  background-color:#B60003;
-  border: none;
-  padding: .5em 2em;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 5px;
-  width: 150px;
-}
-
-.cadastro-defesa .botoes .confirmar {
-  background-color: #77D353;
-  border: none;
-  padding: .5em 2em;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 5px;
-  width: 150px;
-}
-
-.cadastro-defesa .banca h5 {
-  margin: .5em 0 0 0;
-  font-size: 20px;
-  padding: 0;
-}
-
-.cadastro-defesa input { width: 100%; }
-.visu-defesa .banca .prof { padding-top: 0.5em; }
-.visu-defesa .banca .titulo { margin-left: 1.5em; }
-
-.cadastro-defesa .horalocal {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.cadastro-defesa form .nome,
-.cadastro-defesa form .titulo {
-  display: flex;
-  flex-direction: column;
-}
-</style>
-
 <body>
-    <div class="defesa container">
-        <h3>Agendamento de defesas</h3>
-        <div class="row">
-            <div class="col-lg-3" style="width: 100%;">
-
-                <div class="calendar">
-                    <h5>Calendário</h5>
-
-                    <div class="container" id="main">
-                        <div class="jumbotron">
-                            <h1 class="text-center"><a id="left" href="#"><i class="fa fa-chevron-left">
-                                    </i></a><span>&nbsp;</span><span id="month"> </span><span>&nbsp;</span><span
-                                    id="year">
-                                </span><span>&nbsp;</span><a id="right" href="#"><i class="fa fa-chevron-right">
-                                    </i></a>
-                            </h1>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-10 col-sm-offset-1">
-                                <table class="table"></table>
-                            </div>
-                        </div>
-                    </div><span id="about"><a href="http://odran037.github.io" target="_blank"><i
-                                class="fa fa-question-circle"> </i></a></span>
-                </div>
-            </div>
-            <div class="col-lg-9 defesas-detalhe cadastro-defesa visu-defesa">
-                <h5>Defesa</h5>
-                <form action="">
-                    <div class="nome">
-                        <label for="nome">Nome: Igor Tavares de Camargo</label>
-                    </div>
-                    <div class="titulo">
-                        <label for="titulo">Título: Análise de Vulnerabilidade na Infraestrutura da Rede da Universidade Estadual de Maringá</label>
-                    </div>
-                    <div class="hora">
-                        <div class="local">
-                            <label for="local">Local: Sala 101 DIN</label>
-                        </div>
-                        <div class="hora">
-                            <label for="hora">Horário: 21h20min</label>
-                        </div>
-                    </div>
-
-                    <div class="banca">
-                        <div class="prof">Professores:</div>
-                        <div class="titulo">
-                            <label for="titulo">Daniel Kikuti</label>
-                        </div>
-                        <div class="titulo">
-                            <label for="titulo">Ademir Aparecido Constantino</label>
-                        </div>
-                        <div class="titulo">
-                            <label for="titulo">Rodrigo Calvo</label>
-                        </div>
-                    </div>
-
-                    <div class="botoes">
-                        <button class="cancelar">Voltar</button>
-                        <button class="confirmar">Editar</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+	<section class="main-content" layout:fragment="content">
+    	<div id="wrap" class="container">
+			<div id="main">
+				<div class="jumbotron">
+					<div class="row justify-content-center">
+						<h3>Detalhes da defesa</h3>
+					</div>
+					<hr/>
+					<div th:object="${agendamento}">
+					<table id="agendamento"
+				class="table ">
+				
+				<tbody>
+                    <tr>
+						<th class="text-right" width="50%">Nome do aluno:</th>
+						<td th:text="*{fichaIdentificacao.aluno.nome}"></td>
+                    </tr>
+                    <tr>
+						<th class="text-right" width="50%">Título do trabalho:</th>
+						<td th:text="*{fichaIdentificacao.tituloTrabalho}"></td>
+                    </tr>
+                    <tr>
+						<th class="text-right" width="50%">Data:</th>
+						<td th:text="*{dataDefesa}"></td>
+                    </tr>
+                    <tr>
+						<th class="text-right" width="50%">Horário:</th>
+						<td th:text="*{horario}"></td>
+                    </tr>
+                    <tr>
+						<th class="text-right" width="50%">Local:</th>
+						<td th:text="*{local}"></td>
+                    </tr>
+                    <tr>
+						<th class="text-right" width="50%">Orientador:</th>
+						<td th:text="*{fichaIdentificacao.orientador.nome}"></td>
+                    </tr>
+                    <tr>
+						<th class="text-right" width="50%">Avaliador 1:</th>
+						<td th:text="*{fichaIdentificacao.avaliador1.nome}"></td>
+                    </tr>
+                    <tr>
+						<th class="text-right" width="50%">Avaliador 2:</th>
+						<td th:text="*{fichaIdentificacao.avaliador2.nome}"></td>
+                    </tr>
+				</tbody>
+				<tfoot>
+			
+				</tfoot>
+			</table>
+				<hr />
+				<div class="form-group row justify-content-center ">
+					<div class=" col-sm-2">
+						<a id="alert" class="btn btn-lg btn-danger" th:href="@{/gtcc/agendamentodefesa}"> Voltar </a>
+					</div>
+					<div class=" col-sm-2 text-right">
+						<a class="btn btn-lg btn-warning" th:href="@{/gtcc/agendamentodefesa/editar/{id}(id=${agendamento.id})}" >Editar</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-
-<script>
-
-</script>
 
 </html>
