--- a/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
@@ -105,7 +105,7 @@
 						<hr />
 						<div class="form-group row justify-content-center ">
 							<div class=" col-sm-2">
-								<a id="alert" class="btn btn-lg btn-primary" th:href="@{/gtcc/agendamentodefesa}"> Cancelar </a>
+								<a id="alert" class="btn btn-lg btn-danger" th:href="@{/gtcc/agendamentodefesa}"> Cancelar </a>
 							</div>
 							<div class="col-sm-2 text-right">
 								<button type="submit" class="btn btn-lg btn-success">Atualizar</button>
