--- a/src/main/resources/templates/agendamentodefesa/defesaCreate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaCreate.html
@@ -1,325 +1,356 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt"
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{layout/layout}" >
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>GTCC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link href="webjars/bootstrap/4.0.0/css/bootstrap.min.css"
+        rel="stylesheet">
+    <script src="../../static/js/jquery_mask/jquery.mask.js"></script>   
+    <script src="../../static/js/jquery_mask/jquery.mask.min.js"></script>  
+	<script src="webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+</head>        
 
-<!-- Nao encontrei o arquivo .css, dai tem que atualizar com este que esta aqui -->
 <style>
-	.defesa h3 {
-		text-align: center;
-		font-size: 2em;
-		margin: 1em auto 1em;
-	}
-
-	.defesas-detalhe {
-		background-color: #e5e5e5;
-		padding: 2em 3em;
-		border-radius: 5px;
-		width: 100%;
-	}
-
-	.defesas-detalhe table {
-		display: flex;
-		align-items: center;
-		width: 100%;
-	}
-
-	.defesas-detalhe thead {
-		width: 100%;
-		background-color: #fff;
-		border-radius: 5px;
-		padding: 1em;
-	}
-
-	.defesas-detalhe h5 {
-		font-size: 1.5em;
-		padding-bottom: .5em;
-	}
-
-	.defesas-detalhe table th {
-		padding-left: 0.25em;
-	}
-
-	.defesas-detalhe table .infos {
-		text-align: left;
-		font-weight: 700;
-		padding-left: 0.5em;
-	}
-
-	.defesas-detalhe table th {
-		text-transform: none;
-		font-weight: 100;
-	}
-
-	.jumbotron {
-		background: #fff;
-	}
-
-	.fa {
-		font-size: 0.5em;
-	}
-
-	.calendar {
-		background-color: #e3e3e3;
-		border-radius: 5px;
-		padding: 1em 0;
-		margin-bottom: 1em;
-	}
-
-	.calendar table {
-		width: 90%;
-	}
-
-	.calendar th {
-		text-align: center;
-	}
-
-	.calendar td {
-		width: 100px;
-		text-align: center;
-		font-size: 1em;
-	}
-
-	.calendar td,
-	#year {
-		font-family: monospace;
-	}
-
-	.calendar .hover {
-		background: #eee;
-	}
-
-	.calendar #about {
-		font-size: 5em !important;
-		position: absolute;
-		top: -35px;
-		right: 15px;
-	}
-
-	.calendar h5 {
-		padding-left: 1em;
-		font-size: 1.25rem;
-	}
-
-	#about a {
-		text-decoration: none;
-	}
-
-	.pdf {
-		background-color: #e5e5e5;
-		padding: 1em;
-		border-radius: 5px;
-		text-align: center;
-	}
-
-	.pdf form {
-		text-align: left;
-		padding: 0 .5em;
-	}
-
-	.pdf button {
-		margin-top: 1em;
-	}
-
-	.pdf h5 {
-		text-align: left;
-	}
-
-	.pdf button {
-		background-color: #343F4B;
-		border: none;
-		padding: .5em 2em;
-		color: white;
-		text-transform: uppercase;
-	}
-
-	.cadastro-defesa form {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		padding: 0 1em;
-	}
-
-	.cadastro-defesa label {
-		width: 100%;
-		padding-top: .5em;
-	}
-
-	.cadastro-defesa .botoes {
-		padding-top: 1em;
-		display: flex;
-		justify-content: space-between;
-
-	}
-
-	.cadastro-defesa .botoes .cancelar {
-		background-color: #343F4B;
-		border: none;
-		padding: .5em 2em;
-		color: white;
-		text-transform: uppercase;
-		border-radius: 5px;
-		width: 150px;
-	}
-
-	.cadastro-defesa .botoes .excluir {
-		background-color: #B60003;
-		border: none;
-		padding: .5em 2em;
-		color: white;
-		text-transform: uppercase;
-		border-radius: 5px;
-		width: 150px;
-	}
-
-	.cadastro-defesa .botoes .confirmar {
-		background-color: #77D353;
-		border: none;
-		padding: .5em 2em;
-		color: white;
-		text-transform: uppercase;
-		border-radius: 5px;
-		width: 150px;
-	}
-
-	.cadastro-defesa .banca h5 {
-		margin: .5em 0 0 0;
-		font-size: 20px;
-		padding: 0;
-	}
-
-	.cadastro-defesa input {
-		width: 100%;
-	}
-
-
-	.visu-defesa .banca .prof {
-		padding-top: 0.5em;
-	}
-
-	.visu-defesa .banca .titulo {
-		margin-left: 1.5em;
-	}
-
-	.cadastro-defesa .horalocal {
-		display: flex;
-		justify-content: space-between;
-		width: 100%;
-	}
-
-	.cadastro-defesa form .nome,
-	.cadastro-defesa form .titulo {
-		display: flex;
-		flex-direction: column;
-	}
-
-	#datepicker,
-	.ui-datepicker {
-		width: 90% !important;
-		text-align: center;
-		margin: 0 auto;
-	}
-
-	.ui-datepicker td span,
-	.ui-datepicker td a {
-		text-align: center;
-	}
-
-	.ui-datepicker th {
-		padding: .135em;
-	}
-
-	.ui-datepicker-month,
-	.ui-datepicker-year {
-		font-size: 0.8em;
-		line-height: 1em;
-	}
-
-	.ui-widget-content .ui-state-default {
-		background: #b3b3b3 url('../../static/images/ui-bg_glass_75_e6e6e6_1x400.png') 50% 50% repeat-x;
-	}
-
-	.ui-state-default.ui-state-active {
-		background: white url('../../static/images/ui-bg_glass_75_e6e6e6_1x400.png') 50% 50% repeat-x;
-	}
+.defesa h3 {
+    text-align: center;
+    font-size: 2em;
+    margin: 1em auto 1em;
+}
+.defesas-detalhe {
+    background-color: #e5e5e5;
+    padding: 2em 3em;
+    border-radius: 5px;
+    width: 100%;
+}
+table {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+thead {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 1em;
+}
+.defesas-detalhe h5 {
+    font-size: 1.5em;
+    padding-bottom: .5em;
+}
+table th { padding-left: 0.25em; }
+table .infos {
+    text-align: left;
+    font-weight: 700;  
+    padding-left: 0.5em;
+}
+table th {
+    text-transform: none;
+    font-weight: 100;
+}
+  .jumbotron { background: #fff; }
+  .fa { font-size: 0.5em; }
+  .calendar table { width: 100%; }
+  .calendar th { text-align: center; }
+  .calendar td {
+    width: 120px;
+    height: 100px;
+    text-align: center;
+    line-height: 100px !important;
+    font-size: 1.5em;
+  }
+  .calendar td, #year { font-family: monospace; }
+  .calendar .hover { background: #eee; }
+  .calendar #about {
+    font-size: 5em !important;
+    position: absolute;
+    top: -35px;
+    right: 15px;
+  }
+  #about a { text-decoration: none; }
+  
+  .pdf {
+    background-color: #e5e5e5;
+    padding: 1em;
+    border-radius: 5px;
+    text-align: center;
+  }
+  .pdf h5 {
+    text-align: left;
+    padding-bottom: 1em;
+  }
+  .pdf button {
+    background-color: #343F4B;
+    border: none;
+    padding: .5em 2em;
+    color: white;
+    text-transform: uppercase;
+  }
+.cadastro-defesa form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 1em;
+}
+.cadastro-defesa label {
+  width: 100%;
+  padding-top: .5em;
+}
+.cadastro-defesa .botoes {
+  padding-top: 1em;
+  display: flex;
+  justify-content: space-between;
+  
+}
+.cadastro-defesa .botoes .cancelar {
+  background-color: #343F4B;
+  border: none;
+  padding: .5em 2em;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 5px;
+  width: 150px;
+}
+.cadastro-defesa .botoes .excluir {
+  background-color:#B60003;
+  border: none;
+  padding: .5em 2em;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 5px;
+  width: 150px;
+}
+.cadastro-defesa .botoes .confirmar {
+  background-color: #77D353;
+  border: none;
+  padding: .5em 2em;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 5px;
+  width: 150px;
+}
+.cadastro-defesa .banca h5 {
+  margin: .5em 0 0 0;
+  font-size: 20px;
+  padding: 0;
+}
+.cadastro-defesa input { width: 100%; }
+.visu-defesa .banca .prof { padding-top: 0.5em; }
+.visu-defesa .banca .titulo { margin-left: 1.5em; }
+.cadastro-defesa .horalocal {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.cadastro-defesa form .nome,
+.cadastro-defesa form .titulo {
+  display: flex;
+  flex-direction: column;
+}
 </style>
 
 
 <body>
-    <div class="defesa container">
-        <h3>Agendamento de defesas</h3>
-        <div class="row">
-            <div class="col-lg-3" style="width: 100%;">
-
-                <div class="calendar">
-                    <h5>Calendário</h5>
-                    <div id="datepicker"></div>
-                </div>
-                <div class="col-lg-9 defesas-detalhe cadastro-defesa">
-                    <h5>Cadastro de defesa</h5>
-                    <form action="">
-                        <div class="nome">
-                            <label for="nome">Nome</label>
-                            <select name="nome" id="" aria-placeholder="Aluno">
-                                <option value="opt">Ana Claudia Lima Almeida Inacio Costa</option>
-                                <option value="opt">Claudia</option>
-                            </select>
+	<section class="main-content"  layout:fragment="content">
+		<div id="wrap" class="container">
+			<div class="defesa container">
+				<h3>Agendamento de defesas</h3>
+	    	<div class="row">
+	      <div class="col-lg-3" style="width: 100%;">
+			<div class="jumbotron">
+	        <div class="row justify-content-center">
+	          <h5>Calendário</h5>
+	
+	          <div class="container" id="main">
+	            
+	          </div>
+	        </div>
+	        </div>
+	        	<div class="jumbotron">
+	        <div class="row justify-content-center">
+	          <h5>Gerar PDF</h5>
+	          </div>
+	          <hr />
+                    <div class="form-group offset-md-4 offset-sm-1">
+                        <div class="form-check row">
+                            <input class="form-check-input" type="checkbox" name="" id="" value="1">
+                            <label class="form-check-label" for="">
+                                Edital de defesas
+                            </label>
                         </div>
-                        <div class="titulo">
-                            <label for="titulo">Título</label>
-                            <input type="text" placeholder="Título">
+                        <div class="form-check row">
+                            <input class="form-check-input" type="checkbox" name="" id="" value="1">
+                            <label class="form-check-label" for="">
+                                Ata de defesa
+                            </label>
                         </div>
-                        <div class="horalocal">
-                            <div class="data">
-                                <label for="data">Data</label>
-                                <input type="text">
-                            </div>
-                            <div class="local">
-                                <label for="local">Local</label>
-                                <input type="text">
-                            </div>
-                            <div class="hora">
-                                <label for="hora">Horário</label>
-                                <input type="text" class="last">
-                            </div>
-                        </div>
-
-                        <div class="banca">
-                            <div class="titulo">
-                                <label for="titulo">Orientador</label>
-                                <input type="text">
-                            </div>
-                            <div class="titulo">
-                                <label for="titulo">Professor Avaliador 1</label>
-                                <input type="text">
-                            </div>
-                            <div class="titulo">
-                                <label for="titulo">Professor Avaliador 2</label>
-                                <input type="text">
-                            </div>
-                        </div>
-
-                        <div class="botoes">
-                            <button class="cancelar">Cancelar</button>
-                            <button class="confirmar">Confirmar</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+                    </div>
+                    <div class="row justify-content-center">
+	          <button type="button" class="btn btn-success">Gerar</button>
+	          </div>
+	        </div>
+	      </div>
+	      	<div class="jumbotron">
+	      <div class="row justify-content-center">
+							<h3 >Cadastro de defesa</h3>
+							</div>
+							<hr />
+						<!-- <div class="text-right">
+							<button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#ajudaModal">
+									Ajuda <i class="fa fa-question"></i>
+							</button>
+						</div>-->
+					<!-- MESSAGES -->
+					<form th:object="${agendamento}" th:action="@{/gtcc/agendamentodefesa/cadastrar}" method="POST" 
+						class="form-default form-horizontal" >
+						<div class="form-group row justify-content-center">
+							<div class="controls col-sm-12 col-sm-12">
+								<select id="alunoSelecionado" class="form-control">
+									<option value="">Selecione o Aluno*</option>
+									<option th:each="ficha : ${fichas}"
+										th:value="${ficha.id}"
+										th:text="${ficha.aluno.nome}"></option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group row justify-content-center">
+                        <div class="controls col-sm-12 col-sm-12">
+								<input id="tituloTrabalho" type="text" value="Título do trabalho*" disabled />
+							</div>
+						</div>
+						<form>
+						<div class="form-row">
+                        	<div class="col">
+								<input type="text" name="dataDefesa"
+									id="dataDefesa" class="form-control"
+									th:field="*{dataDefesa}" autofocus="autofocus"
+									placeholder="Data de defesa*" aria-label="Data de defesa"
+                                   		aria-describedby="basic-addon1"/>
+									<div style="color: red;" th:if="${#fields.hasErrors('dataDefesa')}" th:errors="*{dataDefesa}" ></div>
+							</div>
+							<div class="col">
+								<input type="text" name="horario"
+									id="horario" class="form-control"
+									th:field="*{horario}" autofocus="autofocus"
+									placeholder="Horário*" aria-label="Horario"
+                                   		aria-describedby="basic-addon1"
+									/>
+									<div style="color: red;" th:if="${#fields.hasErrors('horario')}" th:errors="*{horario}" ></div>
+							</div>
+						</div>
+						</form>
+						<div class="form-group row justify-content-center ">
+							<div class="controls col-sm-12 col-sm-12">
+								<input type="text" name="local"
+									th:field="*{local}"
+									id="local" class="form-control" autofocus="autofocus"
+									placeholder="Local*" aria-label="Local"
+                                   		aria-describedby="basic-addon1"
+									/>
+									<div style="color: red;" th:if="${#fields.hasErrors('local')}" th:errors="*{local}" ></div>
+							</div>
+						</div>
+						<div class="form-group row justify-content-center ">
+							<div class="controls col-sm-12 col-sm-12">
+								<input id="orientador" type="text" autofocus="autofocus" value="Orientador" disabled/>
+							</div>
+						</div>
+						<div class="form-group row justify-content-center ">
+							<div class="controls col-sm-12 col-sm-12">
+								<input id="avaliador1" type="text" autofocus="autofocus" value="Avaliador 1" disabled/>
+							</div>
+						</div>
+						<div class="form-group row justify-content-center ">
+							<div class="controls col-sm-12 col-sm-12">
+								<input id="avaliador2" type="text" autofocus="autofocus" value="Avaliador 2" disabled/>
+							</div>
+						</div>
+						<p class="text-danger text-center">*Campos obrigatórios.</p>
+						<hr />
+						<div class="form-group row justify-content-center ">
+							<div class=" col-sm-2">
+								<a id="alert" class="btn btn-lg btn-danger" th:href="@{/gtcc/agendamentodefesa}" >
+									Cancelar </a>
+							</div>
+							<div class="col-sm-2 text-right">
+								<button id="btn_salvar" type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#confirmacaoModal">
+									Confirmar
+								</button>
+							</div>
+						</div>
+						
+							<script th:inline="javascript">
+								$('#alunoSelecionado').change(function() {
+							    	selectedOption = $('option:selected', this);
+							    	$("#tituloTrabalho").val( selectedOption.data('tituloTrabalho') );
+							    	$("#orientador").val( selectedOption.data('orientadorIdProfessor') );
+							   		$("#avaliador1").val( selectedOption.data('avaliador1IdProfessor') );
+							   		$("#avaliador2").val( selectedOption.data('avaliador2IdProfessor') );
+								});
+							</script>
+						
+						<!--  MODAL -->
+						<div class="modal fade" id="confirmacaoModal" tabindex="-1" role="dialog" aria-labelledby="confirmacaoModalLabel" aria-hidden="true">
+						  <div class="modal-dialog" role="document">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <h5 class="modal-title" id="confirmacaoModalLabel">Confirmação</h5>
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						          <span aria-hidden="true">&times;</span>
+						        </button>
+						      </div>
+						      <div class="modal-body">
+						      	<span id="spanValidade" style="color:red;"></span>
+						        Deseja realmente cadastrar este produto?
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+						        <button type="submit" class="btn btn-primary">Confirmar</button>
+						      </div>
+						    </div>
+						  </div>
+						</div>	
+						
+						<!--<div class="modal fade" id="ajudaModal" tabindex="-1" role="dialog" aria-labelledby="ajudaModalLabel" aria-hidden="true">
+						  <div class="modal-dialog" role="document">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <h5 class="modal-title" id="ajudaModalLabel">Ajuda</h5>
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						          <span aria-hidden="true">&times;</span>
+						        </button>
+						      </div>
+						      <div class="modal-body">
+						        <h4>Quantidade mínima</h4>
+						        <p class="text-justify"> Quantidade mínima do produto que deverá ter no estoque. Valor utilizado para alertar o usuário a necessidade
+						        	de compra  do produto para reabastecer o estoque. </p>
+						        	<hr/>
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button" class="btn btn-success" data-dismiss="modal">Entendi</button>
+						      </div>
+						    </div>
+						  </div>
+						</div>-->
+				</form>
+				</div>
+				</div>
+				</div>
+			<div id="push"></div>
+		</div>
+		
+		
+	</section>
+	
 </body>
-
-<script>
-
-</script>
 
 </html>
