--- a/src/main/resources/templates/agendamentodefesa/defesaCreate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaCreate.html
@@ -199,7 +199,7 @@ table th {
 	          </div>
 	        </div>
 	      </div>
-	      	<div class="jumbotron">
+	      	<div class="jumbotron col-lg-9" style="width:100%;">
 	      <div class="row justify-content-center">
 							<h3 >Cadastro de defesa</h3>
 							</div>
@@ -224,7 +224,7 @@ table th {
 						</div>
 						<div class="form-group row justify-content-center">
                         <div class="controls col-sm-12 col-sm-12">
-								<input id="tituloTrabalho" type="text" value="Título do trabalho*" disabled />
+								<input id="tituloTrabalho" type="text" value="Título do trabalho*" disabled / style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;">
 							</div>
 						</div>
 						<form>
@@ -246,10 +246,7 @@ table th {
 									/>
 									<div style="color: red;" th:if="${#fields.hasErrors('horario')}" th:errors="*{horario}" ></div>
 							</div>
-						</div>
-						</form>
-						<div class="form-group row justify-content-center ">
-							<div class="controls col-sm-12 col-sm-12">
+							<div class="controls col">
 								<input type="text" name="local"
 									th:field="*{local}"
 									id="local" class="form-control" autofocus="autofocus"
@@ -259,24 +256,28 @@ table th {
 									<div style="color: red;" th:if="${#fields.hasErrors('local')}" th:errors="*{local}" ></div>
 							</div>
 						</div>
+						</form>
+						<div class="form-group row justify-content-center ">
+							
+						</div>
 						<div class="form-group row justify-content-center ">
 							<div class="controls col-sm-12 col-sm-12">
-								<input id="orientador" type="text" autofocus="autofocus" value="Orientador" disabled/>
+								<input id="orientador" type="text" autofocus="autofocus" value="Orientador" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
 							</div>
 						</div>
 						<div class="form-group row justify-content-center ">
 							<div class="controls col-sm-12 col-sm-12">
-								<input id="avaliador1" type="text" autofocus="autofocus" value="Avaliador 1" disabled/>
+								<input id="avaliador1" type="text" autofocus="autofocus" value="Avaliador 1" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
 							</div>
 						</div>
 						<div class="form-group row justify-content-center ">
 							<div class="controls col-sm-12 col-sm-12">
-								<input id="avaliador2" type="text" autofocus="autofocus" value="Avaliador 2" disabled/>
+								<input id="avaliador2" type="text" autofocus="autofocus" value="Avaliador 2" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
 							</div>
 						</div>
 						<p class="text-danger text-center">*Campos obrigatórios.</p>
 						<hr />
-						<div class="form-group row justify-content-center ">
+						<div class="form-group row" style="display: flex; justify-content: space-between;">
 							<div class=" col-sm-2">
 								<a id="alert" class="btn btn-lg btn-danger" th:href="@{/gtcc/agendamentodefesa}" >
 									Cancelar </a>
