--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -294,7 +294,7 @@
 	}
 
 	.ui-state-default.ui-state-active {
-		background: white url('../../static/images/ui-bg_glass_75_e6e6e6_1x400.png') 50% 50% repeat-x;
+		background: white url('../..;/static/images/ui-bg_glass_75_e6e6e6_1x400.png') 50% 50% repeat-x;
 	}
 </style>
 
