fix: ajeitando css

--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -70,10 +70,7 @@
 	}
 
 	.defesas-detalhe thead {
-		width: 100% !important;
-		background-color: #fff !important;
-		border-radius: 5px !important;
-		padding: 1em !important;
+		width: 100% !important;background-color: #fff !important;border-radius: 5px !important;padding: 1em !important;
 	}
 
 	.defesas-detalhe h5 {
@@ -294,16 +291,14 @@
 	<section layout:fragment="content">
 		<div id="wrap" class="container">
 			<div class="defesa container">
-				<h3 style="text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;"Agendamento de defesas</h3>
+				<h3 style="text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;">Agendamento de defesas</h3>
 				<div class="row">
 					<div class="col-lg-3" style="width: 100%;">
 
 						<div class="calendar">
 							<h5>Calendário</h5>
 							<div id="datepicker"></div>
-							<div class="container" id="main">
-
-							</div>
+							<div class="container" id="main"></div>
 						</div>
 						<div class="pdf" style='background-color: #e5e5e5; padding: 1em;'>
 							<h5>Gerar PDF</h5>
@@ -327,13 +322,13 @@
 						<h5>Próximas defesas</h5>
 						<table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click" style="display: flex !important;align-items: center !important;width: 100% !important;">
 
-							<thead>
+							<thead style="width: 100% !important;background-color: #fff !important;border-radius: 5px !important;padding: 1em !important;">
 								<tr>
-									<th class="">Data</th>
-									<th class="">Orientando</th>
-									<th class="">Horário</th>
-									<th class="">Local</th>
-									<th class="">Ações</th>
+									<th style="padding-left: 0.25em !important;" class="">Data</th>
+									<th style="padding-left: 0.25em !important;" class="">Orientando</th>
+									<th style="padding-left: 0.25em !important;" class="">Horário</th>
+									<th style="padding-left: 0.25em !important;" class="">Local</th>
+									<th style="padding-left: 0.25em !important;" class="">Ações</th>
 								</tr>
 							</thead>
 
