fix: resolvendo css

--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -74,8 +74,7 @@
 	}
 
 	.defesas-detalhe h5 {
-		font-size: 1.5em !important;
-		padding-bottom: .5em !important;
+		font-size: 1.5em !important;padding-bottom: .5em !important;
 	}
 
 	.defesas-detalhe table th {
@@ -148,15 +147,11 @@
 	}
 
 	.pdf {
-		background-color: #e5e5e5 !important;
-		padding: 1em !important;
-		border-radius: 5px !important;
-		text-align: center !important;
+		background-color: #e5e5e5 !important;padding: 1em !important;border-radius: 5px !important;text-align: center !important;
 	}
 
 	.pdf form {
-		text-align: left !important;
-		padding: 0 .5em !important;
+		text-align: left !important;padding: 0 .5em !important;
 	}
 
 	.pdf button {
@@ -168,11 +163,7 @@
 	}
 
 	.pdf button {
-		background-color: #343F4B !important;
-		border: none !important;
-		padding: .5em 2em !important;
-		color: white !important;
-		text-transform: uppercase !important;
+		background-color: #343F4B !important;border: none !important;padding: .5em 2em !important;color: white !important;text-transform: uppercase !important;
 	}
 
 	.cadastro-defesa form {
@@ -299,9 +290,9 @@
 							<div id="datepicker"></div>
 							<div class="container" id="main"></div>
 						</div>
-						<div class="pdf" style='background-color: #eceff5; padding: 1em;'>
-							<h5>Gerar PDF</h5>
-							<form action="">
+						<div class="pdf" style='background-color: #eceff5; padding: 1em;border-radius: 5px !important;text-align: center !important;'>
+							<h5 style="text-align: left !important;">Gerar PDF</h5>
+							<form action="" style="text-align: left !important;padding: 0 .5em !important;">
 								<input type="radio" name="edital" value="edital">
 								<label for="edital">Edital de Defesa</label><br>
 								<input type="radio" name="vehicle2" value="Car">
@@ -314,11 +305,11 @@
 								</select>
 							</form>
 
-							<button>Gerar</button>
+							<button style="margin-top: 1em !important;background-color: #343F4B !important;border: none !important;padding: .5em 2em !important;color: white !important;text-transform: uppercase !important;">Gerar</button>
 						</div>
 					</div>
 					<div class="col-lg-9 defesas-detalhe" style="box-sizing:border-box !important; background-color: #eceff5 !important;padding: 2em 1em !important;border-radius: 5px !important;width: 100% !important;">
-						<h5>Próximas defesas</h5>
+						<h5 style="font-size: 1.5em !important;padding-bottom: .5em !important;">Próximas defesas</h5>
 						<table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click" style="display: flex !important;align-items: center !important;width: 100% !important;flex-direction:column;">
 
 							<thead style="width: 100% !important; display:flex; justify-content: space-between; background-color: #fff !important; border:none; border-radius: 5px !important;padding: 1em !important;">
